--- a/cart/backend/package.json
+++ b/cart/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.20",
-    "stripe": "^11.8.0"
+    "stripe": "^11.8.0",
+    "uuid": "^9.0.0"
   }
 }
