--- a/cart/package.json
+++ b/cart/package.json
@@ -17,12 +17,14 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.5",
+    "dotenv": "^16.0.3",
     "framer-motion": "^8.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
